[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
config = "0.13.3"
extism = "0.5"
pretty_env_logger = "0.5.0"
rumqttd = { version = "0.18.0" }
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"

